# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: hexlet-check.yml  python-package.yml
gendiff/: __init__.py  comparer.py  constrants.py  printer.py
gendiff/formatter/: __init__.py  format.py  json.py  plain.py  stylish.py
gendiff/parser/: loader.py  parser.py
gendiff/scripts/: gendiff.py
tests/: expected_data.py  test_gendiff.py
tests/fixtures/nested/: result
tests/fixtures/plain/: result_printed
tests/fixtures/result/: json  plain  stylish
