[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Sergey Radyukhin <22dollars@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
