[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Sergey Radyukhin <22dollars@mail.ru>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Unit test / coverage
htmlcov/
.tox/
.nox/
.coverage
.cache
nosetests.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/